[gd_scene format=3 uid="uid://br113uhgmm0v3"]

[ext_resource type="Texture2D" uid="uid://c55ggm3covhj4" path="res://Source/Assets/Sprites/Menu Principal final.png" id="1_vpgfo"]
[ext_resource type="Script" uid="uid://dvlm5tx45km2i" path="res://Source/Scenes/Levels/Scripts/menu.gd" id="3_i10ex"]

[node name="Menu" type="Node" unique_id=1948867365]

[node name="ColorRect" type="ColorRect" parent="." unique_id=1596800838]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="." unique_id=31715905]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="MenuPaperSemBotoesLigados" type="Sprite2D" parent="Control" unique_id=988867]
position = Vector2(350, 17)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_vpgfo")

[node name="VboxBotoes" type="VBoxContainer" parent="Control/MenuPaperSemBotoesLigados" unique_id=201056274]
custom_minimum_size = Vector2(10, 0)
anchors_preset = -1
anchor_left = 0.0421875
anchor_top = 0.39531252
anchor_right = 0.28906253
anchor_bottom = 0.71718746
offset_left = -1605.0
offset_top = -1590.0
offset_right = -1311.5714
offset_bottom = -1207.4287
scale = Vector2(0.73, 0.98)
theme_override_constants/separation = 65
script = ExtResource("3_i10ex")
metadata/_edit_use_anchors_ = true

[node name="BotaoStart" type="Button" parent="Control/MenuPaperSemBotoesLigados/VboxBotoes" unique_id=1190088582]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 10
flat = true

[node name="BotaoOptions" type="Button" parent="Control/MenuPaperSemBotoesLigados/VboxBotoes" unique_id=1618177612]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 10
flat = true

[node name="BotaoCreditos" type="Button" parent="Control/MenuPaperSemBotoesLigados/VboxBotoes" unique_id=1629222426]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
flat = true

[node name="BotaoSair" type="Button" parent="Control/MenuPaperSemBotoesLigados/VboxBotoes" unique_id=1768535427]
custom_minimum_size = Vector2(157, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 10
flat = true

[connection signal="mouse_exited" from="Control/MenuPaperSemBotoesLigados/VboxBotoes" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoStart" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_start_mouse_entered"]
[connection signal="mouse_exited" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoStart" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_fora"]
[connection signal="pressed" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoStart" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_start_pressed"]
[connection signal="mouse_entered" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoOptions" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_options_mouse_entered"]
[connection signal="mouse_exited" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoOptions" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_fora"]
[connection signal="pressed" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoOptions" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_options_pressed"]
[connection signal="mouse_entered" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoCreditos" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_creditos_mouse_entered"]
[connection signal="pressed" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoCreditos" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_creditos_pressed"]
[connection signal="mouse_entered" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoSair" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_sair_mouse_entered"]
[connection signal="mouse_exited" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoSair" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_fora"]
[connection signal="pressed" from="Control/MenuPaperSemBotoesLigados/VboxBotoes/BotaoSair" to="Control/MenuPaperSemBotoesLigados/VboxBotoes" method="_on_botao_sair_pressed"]
